# graphitesql

./: .gitignore  :memory:  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README.md  ROADMAP.md  file:nope?mode=memory  pipe  release-plz.toml
.github/workflows/: ci.yml  release-binaries.yml  stress.yml
examples/wasm/: worker.js
graphitesql-capi/: Cargo.toml  README.md
graphitesql-capi/include/: sqlite3.h
graphitesql-capi/src/: lib.rs
graphitesql-capi/tests/: ctest.c  run.sh
graphitesql-wasm/: .gitignore  Cargo.toml  README.md
graphitesql-wasm/examples/: index.html
graphitesql-wasm/src/: lib.rs
graphitesql-wasm/tests/: node_smoke.mjs
include/: sqlite3.h
reference/: fetch.sh
src/: capi.rs  error.rs  fts5_index.rs  geopoly.rs  lib.rs  session.rs  value.rs  vtab.rs  wasm.rs
src/btree/: balance.rs  cursor.rs  index_writer.rs  mod.rs  page.rs  ptrmap.rs  writer.rs
src/exec/: datetime.rs  eval.rs  func.rs  integrity.rs  json.rs  mod.rs  stat4.rs  vdbe.rs  window.rs
src/format/: header.rs  mod.rs  record.rs
src/pager/: mod.rs  pcache.rs  wal.rs  write.rs
src/schema/: mod.rs
src/sql/: ast.rs  mod.rs  parser.rs  print.rs  token.rs
src/util/: float.rs  fpdecode.rs  mod.rs  varint.rs
src/vfs/: memory.rs  mod.rs  std_file.rs
tests/: affinity.rs  affinity_queries.rs  affinity_surface.rs  agg_name_arity.rs  agg_window_diff.rs  aggregate_arity.rs  aggregate_arity_prepare_validation.rs  aggregate_kahan_sum.rs  aggregate_misuse.rs  aggregate_order_collate.rs  aggregate_order_join_misuse.rs  all_distinct_operand_syntax.rs  alter.rs  alter_rename_rollback.rs  alter_rename_trigger_rollback.rs  ambiguous_column.rs  ambiguous_column_qualifier.rs  ambiguous_wildcard_origin.rs  analyze.rs  analyze_stat4.rs  api_change_accessors.rs  atan_extreme.rs  attach.rs  authorizer.rs  auto_vacuum.rs  auto_vacuum_create.rs  auto_vacuum_truncate.rs  auto_vacuum_write.rs  autoincrement.rs  bit_shift_negative.rs  blob_numeric_coercion.rs  blob_quote_surface.rs  blob_semantics.rs  btree_churn.rs  btree_fill_factor.rs  btree_index_churn.rs  btree_reserved_bytes.rs  busy_timeout_cross_process.rs  c8c_readonly_cache.rs  c9a_connection_locks.rs  (+592 more)
tests/capi/: ctest.c  run.sh
tests/fixtures/: basic.db  big.db  wal.db-wal
