# A standalone workspace (empty `[workspace]`) so it is NOT pulled into the main
# graphitesql crate's build/test/CI — the core stays zero-dependency and
# `#![forbid(unsafe_code)]`. This browser/wasm binding crate deliberately opts out
# of both constraints (wasm-bindgen generates `unsafe` glue), exactly as the
# ROADMAP notes the D6 JS glue and the D7 C-API shim must.
[workspace]

[package]
name = "graphitesql-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "WebAssembly (browser) bindings for graphitesql, with an OPFS-backed VFS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KarpelesLab/graphitesql"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The core engine, in its no_std+alloc form (the std VFS / OS file locks do not
# exist on wasm32-unknown-unknown; the in-memory VFS and the OPFS VFS below cover it).
graphitesql = { path = "..", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "FileSystemSyncAccessHandle",
  "FileSystemReadWriteOptions",
]

[profile.release]
opt-level = "s"
lto = true
